# USearch

./: .gitignore  .gitmodules  .mailmap  BENCHMARKS.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  MANIFEST.in  Package.swift  README.md  binding.gyp  build.gradle  build.rs  conanfile.py  package-lock.json  package.json  pyproject.toml  setup.py  wasmer.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: prerelease.yml  release.yml
c/: CMakeLists.txt  README.md  lib.cpp  test.c  usearch.h
cpp/: CMakeLists.txt  README.md  bench.cpp  index_gt_test.cpp  test.cpp  test_sorted_buffer_overflow.cpp
csharp/: .gitignore  Cloud.Unum.USearch.sln  Directory.Build.props  README.md
csharp/nuget/: nuget-package.props
csharp/src/.reference/USearch.HybridBenchmark/: Dataset.cs  HybridBenchmark.cs  L2Distance.cs  Program.cs  USearch.HybridBenchmark.csproj
csharp/src/.reference/USearch.SiftBenchmark/: Dataset.cs  Program.cs  SiftBenchmark.cs  USearch.SiftBenchmark.csproj
csharp/src/Cloud.Unum.USearch/: Cloud.Unum.USearch.csproj  HnswGraph.cs  Metrics.cs  NativeMethods.cs  USearchIndex.cs  USearchTypes.cs
csharp/src/Cloud.Unum.USearch.Tests/: Cloud.Unum.USearch.Tests.csproj  IndexTests.cs  MetricsTests.cs  USearchIndexTests.cs
docs/_static/: custom.js
fuzz/regressions/: build_and_run.sh  test_equal_iterator_no_empty_slot.c
golang/: README.md  go.mod  lib.go  lib_test.go
include/usearch/: global_rebuild.hpp  index.hpp  index_dense.hpp  index_plugins.hpp  persistent_index.hpp  persistent_index_helpers.hpp  turboquant.hpp  turboquant_codec.hpp  turboquant_metric.hpp  turboquant_rotation.hpp
java/: CMakeLists.txt  README.md
java/cloud/unum/usearch/: Index.java  cloud_unum_usearch_Index.cpp  cloud_unum_usearch_Index.h
java/test/: IndexTest.java
javascript/: README.md  lib.cpp  usearch.test.js  usearch.ts
objc/: README.md  USearchObjective.mm
objc/include/: USearchObjective.h
python/: README.md  lib.cpp  numkong_bundle.cpp
python/scripts/: bench.py  bench_cluster.py  bench_exact.py  bench_index.py  index_faiss.py  join.py  test_distances.py  test_gil_release.py  test_index.py  test_indexes.py  test_jit.py  test_tooling.py
python/tests/: test_distances.py  test_index.py  test_jit.py  test_sparse.py  test_sqlite.py  test_tooling.py
python/usearch/: __init__.py  client.py  compiled.pyi  eval.py  index.py  io.py  numba.py  server.py
reference/csharp/src/Cloud.Unum.USearch/: Cloud.Unum.USearch.csproj
rust/: README.md  lib.cpp  lib.hpp  lib.rs
sqlite/: README.md
swift/: README.md  Test.swift  USearchIndex+Sugar.swift  USearchIndex.swift
wasm/: README.md
zig/: .gitignore  LICENSE  README.md  build.zig  build.zig.zon
zig/src/: root.zig
zig/usearch/include/: index.hpp  index_dense.hpp  index_plugins.hpp  lib.cpp
