[package]
authors = ["Ash Vardanian <1983160+ashvardanian@users.noreply.github.com>"]
description = "Smaller & Faster Single-File Vector Search Engine from Unum"
documentation = "https://unum-cloud.github.io/USearch"
edition = "2021"
include = [
  "/rust/**",
  "/include/**",
  "/stringzilla/include/**",
  "/build.rs",
]
license = "Apache-2.0"
name = "usearch"
publish = true
repository = "https://github.com/unum-cloud/USearch"
version = "2.25.0"

[features]
default = ["numkong"]
numkong = ["dep:numkong"]
openmp = []
simsimd = ["numkong"]

[lib]
name = "usearch"
path = "rust/lib.rs"

[dependencies]
cxx = "1.0.194"
# Published crates pull `numkong` from crates.io (the `path` is stripped at publish time).
# The local `path = "numkong"` is only used during development against the git submodule.
numkong = {version = ">=7.5.0", path = "numkong", optional = true}

[build-dependencies]
cxx-build = "1.0.194"

[dev-dependencies]
fork_union = "2.1.1" # for concurrency tests
rand = "0.10.0" 
rand_chacha = "0.10.0" # random number generator
rand_distr = "0.6.0" # uniform floats distribution
